--- a/Customer Brand Preference Report - Edison.Rmd
+++ b/Customer Brand Preference Report - Edison.Rmd
@@ -11,7 +11,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, cache = T, warning = F, message = F)
+#knitr::opts_chunk$set(echo = TRUE, cache = T, warning = F, message = F)
 ```
 
 # Goal and Objectives
